--- a/build.gradle
+++ b/build.gradle
@@ -50,7 +50,7 @@ test {
 dependencies {
 	implementation group: 'org.ic4j', name: 'ic4j-candid', version: '0.6.12'
 	
-	//implementation group: 'org.ic4j', name: 'ic4j-agent', version: '0.6.12'
+	implementation group: 'org.ic4j', name: 'ic4j-agent', version: '0.6.12'
 	
 	// https://mvnrepository.com/artifact/org.apache.commons/commons-lang3
 	implementation group: 'org.apache.commons', name: 'commons-lang3', version: '3.12.0'
