--- a/src/test/resources/test.properties
+++ b/src/test/resources/test.properties
@@ -1,3 +1,6 @@
-icUrl=https://m7sm4-2iaaa-aaaab-qabra-cai.raw.ic0.app
-icCanisterId=wmfrn-xyaaa-aaaab-qadea-cai
+//icUrl=http://127.0.0.1:8777/
+//icCanisterId=rrkah-fqaaa-aaaaa-aaaaq-cai
+icUrl=https://m7sm4-2iaaa-aaaab-qabra-cai.ic0.app/
+icCanisterId=6ldcj-gyaaa-aaaab-qacsa-cai
+
 
