Fixed extra properties in ICP

--- a/src/test/resources/test.properties
+++ b/src/test/resources/test.properties
@@ -1,6 +1,7 @@
 //icUrl=http://127.0.0.1:8777/
 //icCanisterId=rrkah-fqaaa-aaaaa-aaaaq-cai
-icUrl=https://m7sm4-2iaaa-aaaab-qabra-cai.ic0.app/
-icCanisterId=3m5ej-xiaaa-aaaab-qacpa-cai
+//icUrl=https://m7sm4-2iaaa-aaaab-qabra-cai.ic0.app/
+icUrl=https://icp-api.io/
+icCanisterId=53qip-2yaaa-aaaab-qac2a-cai
 
 
