--- a/build.gradle
+++ b/build.gradle
@@ -13,7 +13,7 @@ plugins {
 
 
 group 'org.ic4j'
-version '0.7.0'
+version '0.7.1'
 
 sourceCompatibility = 11
 
@@ -48,22 +48,28 @@ test {
 }
 
 dependencies {
-	implementation group: 'org.ic4j', name: 'ic4j-agent', version: '0.7.0'
-	implementation group: 'org.ic4j', name: 'ic4j-candid', version: '0.7.0'	
+	implementation group: 'org.ic4j', name: 'ic4j-agent', version: '0.7.1'
+	implementation group: 'org.ic4j', name: 'ic4j-candid', version: '0.7.1'	
 	
 	// https://mvnrepository.com/artifact/org.apache.commons/commons-lang3
 	implementation group: 'org.apache.commons', name: 'commons-lang3', version: '3.14.0'
 	
 		// https://mvnrepository.com/artifact/org.slf4j/slf4j-simple
 	implementation group: 'org.slf4j', name: 'slf4j-simple', version: '2.0.13'
-	
-	// https://mvnrepository.com/artifact/org.junit.jupiter/junit-jupiter-engine
-	testImplementation group: 'org.junit.jupiter', name: 'junit-jupiter-engine', version: '5.9.2'
 		
 	// https://mvnrepository.com/artifact/org.bouncycastle/bcprov-jdk18on
 	implementation group: 'org.bouncycastle', name: 'bcprov-jdk18on', version: '1.78.1'
 
 	// https://mvnrepository.com/artifact/org.bouncycastle/bcpkix-jdk18on
 	implementation group: 'org.bouncycastle', name: 'bcpkix-jdk18on', version: '1.78.1'
+	
+	// https://mvnrepository.com/artifact/org.junit.jupiter/junit-jupiter-api
+	testImplementation group: 'org.junit.jupiter', name: 'junit-jupiter-api', version: '5.10.0'
+	
+	// https://mvnrepository.com/artifact/org.junit.jupiter/junit-jupiter-engine
+	testImplementation group: 'org.junit.jupiter', name: 'junit-jupiter-engine', version: '5.10.0'
+	
+	// https://mvnrepository.com/artifact/org.junit.platform/junit-platform-launcher
+	testImplementation group: 'org.junit.platform', name: 'junit-platform-launcher', version: '1.10.0'		
 }
 
